--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,3 +20,32 @@ img{
 p{
     padding: 10px;
 }
+main{
+    max-width: 840px;
+}
+aside{
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0,0,0,0.2);
+    padding: 1rem;
+    background-color:#faf5f6 ;
+    color:steelblue ;
+    text-align: center;
+}
+
+aside img{
+    width: 150px;
+    height: auto;
+}
+main img{
+    width: 150px;
+    height: auto;
+}
+p{
+    padding: 0;
+}
+footer{
+    margin-top: 15px;
+    border-top: 1px solid black;
+    text-align: center;
+}
