--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,50 +2,83 @@ nav {
     background-color: steelblue;
     padding: 10px;
 }
+body{
+    font-size: 16px;
+    font-family:Roboto,Arial,sans-serif
+}
+
 nav a{
-    color: #081c15;
+    color: white;
     display: block;
-    padding: 20px;
+    padding: 10px;
 }
 h1{
-    color: black;
+    color: steelblue;
+    padding: .5rem;
 }
 img{
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow: 0 0 30px black;
 }
 p{
     padding: 10px;
 }
 main{
-    max-width: 840px;
+    max-width: 640px;
 }
 aside{
     width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgba(0,0,0,0.2);
-    padding: 1rem;
-    background-color:#faf5f6 ;
-    color:black ;
     text-align: center;
 }
 
 aside img{
-    width: 200px;
+    width: 250px;
     height: auto;
 }
 main img{
     width: 150px;
     height: auto;
+    border: 1px solid black;
+    padding: 2px;
+    box-shadow: 0 0 30px black;
+    float: right;
+    margin:0 0 1rem 1rem;
 }
 p{
-    padding: 0;
+    margin:1rem;
 }
 footer{
-    margin-top: 15px;
+    margin-top: 1em;
     border-top: 1px solid black;
     text-align: center;
+}
+*{
+    margin: 2px;
+    padding: 2px;
+    box-sizing: border-box;
+}
+/* Class Selectors */
+.box{
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 1);
+    padding:1rem;
+    background-color:gainsboro ;
+    color: black;
+}
+aside{
+    width: 20em,;
+    text-align: center;
+    position: relative;
+}
+aside h2{
+    position:absolute;
+    top: 20px;
+    left: 135px;
+}
+
+.indent{
+    padding-left:2rem ;
 }
