--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
-    --color-principal: #3498db;
+    --color-principal: grey;
     --color-fondo: #f9f9f9;
     --color-texto: #333333;
-    --color-resaltado: #e74c3c;
+    --color-resaltado: red;
+    --fuente-titulo:"Monserrat",sans serif;
+    --fuente-parrafo:"Monserrat",sans serif;
 }
 
+
 h1,h2{
+    font-family: var(--fuente-titulo);
     color: var(--color-principal);
 }
 p{
+    font-family: var(--fuente-parrafo);
     color: var(--color-texto);
 }
 nav.socialLinks a {
@@ -19,18 +24,37 @@ nav a {
     text-decoration: none;
     color: var(--color-texto);
 }
-body {
-    margin: 0 auto; 
-    padding: 0 20px;
+body{
+    max-width: 1200px;
+    margin: 12px;
+    height: 100%;
+    background-color: var(--color-fondo)
 }
+
 .hero{
     position: relative;
 }
-h1,article{
+.hero h1{
     position: absolute;
+    top: 0;
+    left: 0;
 }
 .hero img{
-    display: block;
-    width: 50%;
+    max-width: 600px;
     height: auto;
+}
+.hero article{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: antiquewhite;
+    padding: 20px;
+    width: 300px;
+    color: var(--color-texto);
+}
+.hero article p{
+    color: var(--color-texto);
+}
+.hero article img{
+    float: right;
 }
