--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -33,7 +33,8 @@ body{
 .hero h1{
     position:absolute;
     top: 20px;
-    left: 135px;
+    left: 20px;
+    font-size: 36px;
 }
 .hero img{
     max-width:100%;
@@ -42,12 +43,12 @@ body{
 }
 .hero article{
     position: absolute;
-    top: 0;
-    left: 0;
+    bottom: 20px;
+    left: 20px;
+    color: var(--color-texto);
+    font-size: 18px;
     background-color: wheat;
     padding: 20px;
-    width: 300px;
-    color: var(--color-texto);
 }
 .hero article p{
     color: var(--color-texto);
