--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,10 @@
 }
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 body{
     font-size: 16px;
@@ -15,7 +18,11 @@ body{
 nav a{
     color: white;
     display: block;
-    padding: 10px;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    
 }
 h1{
     color: steelblue;
@@ -32,8 +39,10 @@ p{
     padding: 10px;
 }
 main{
-    max-width: 640px;
+    grid-column: 2/3;
+    margin:1rem;
 }
+
 aside{
     width: 20rem;
     text-align: center;
@@ -71,8 +80,9 @@ footer{
 }
 aside{
     width: 20em;
-    text-align:center;
     position:relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 aside h2{
     position:absolute;
@@ -82,4 +92,13 @@ aside h2{
 
 .indent{
     padding-left:2rem ;
+}
+header,.grid,footer{
+    max-width: 840px;
+    margin:0 auto;
+
+}
+.grid{
+    display:grid;
+    align-items: center;
 }
