--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,9 +93,9 @@ aside h2{
 .indent{
     padding-left:2rem ;
 }
-header,.grid,footer{
-    max-width: 840px;
+header,footer,.grid{
     margin:0 auto;
+    max-width: 840px;
 
 }
 .grid{
